# PodFlow

./: Cargo.toml  README.md  build.rs  config.yaml
cases/: cases.yaml
deploy/kubernetes/: nuts-observer-nri-daemonset.yaml
deploy/nri/: 99-nuts-observer-nri.conf  nuts-observer-nri.toml
docs/: 01_overview.md  02_schemas.md  03_nri_mapping_spec.md  04_bpftrace_minimal_chains.md  05_api_cli_contract.md  06_schedule_8w.md  07_poc_checklist.md  08_collector_bpftrace_to_fields.md  09_probe_field_validation.md  10_case_library_guide.md  11_bpftrace_output_standard.md  12_privilege_separation_arch.md  13_alert_platform_design.md  14_ai_adapter_design.md  CONTAINERD_NRI_INTEGRATION.md
proto/: collector.proto  nri.proto
src/: cli.rs  config.rs  lib.rs  main.rs
src/ai/: async_bridge.rs  llm_client.rs  mod.rs
src/api/: condition.rs  health.rs  mod.rs  nri.rs  rule_management.rs  trigger.rs
src/collector/: block_io.rs  bpftrace_adapter.rs  cgroup_contention.rs  collector_client.rs  fs_stall.rs  mod.rs  network.rs  nri_containerd.rs  nri_grpc.rs  nri_mapping.rs  nri_socket.rs  nri_v3.rs  oom_events.rs  permission.rs  syscall_latency.rs
src/diagnosis/: ai_enhanced_engine.rs  alert_engine.rs  case_library.rs  engine.rs  mod.rs  rule_manager.rs  trend_rule.rs
src/proto/: nuts.collector.rs
src/publisher/: alert_adapter.rs  mod.rs
src/types/: alert.rs  (+4 more)
systemd/: nuts-collector-daemon.service  nuts-observer.service
tests/: README.md  api_integration_test.rs  e2e_containerd_nri.sh  test_bpftrace_standard.sh  test_daemon_observer_e2e.sh  test_privilege_separation.sh
(+9 files in other folders)
