[package]
name = "nuts-observer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nuts-observer"
path = "src/main.rs"

[[bin]]
name = "nuts-observer-cli"
path = "src/bin/nuts_observer_cli.rs"

[[bin]]
name = "nuts-collector-daemon"
path = "src/bin/collector_daemon.rs"

[lib]
name = "nuts_observer"
path = "src/lib.rs"

[dependencies]
serde = { version = "=1.0.200", features = ["derive"] }
serde_json = "=1.0.120"
axum = "=0.7.5"
tokio = { version = "=1.40", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
sha2 = "=0.10.8"
uuid = { version = "=1.10", features = ["v4"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["fmt", "env-filter"] }
chrono = { version = "=0.4.38", features = ["serde"] }
reqwest = { version = "=0.11.18", features = ["json"] }
serde_yaml = "=0.9.34"

clap = { version = "=4.5.4", features = ["derive"] }
libc = "=0.2.155"
async-trait = "=0.1.80"

# gRPC dependencies for privilege separation
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
nix = { version = "0.29", features = ["socket", "process"] }
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "=0.4.13", features = ["util"] }
